[gd_scene load_steps=5 format=3 uid="uid://u7h1rfmnxkre"]

[ext_resource type="Script" uid="uid://bonrejv4k7kbv" path="res://Cooking (mechanics and ui)/Scripts/CookBook/cook_book.gd" id="1_ulscd"]
[ext_resource type="Script" uid="uid://vrbrc881cfhh" path="res://Cooking (mechanics and ui)/Scripts/CookBook/food.gd" id="1_vokew"]
[ext_resource type="Texture2D" uid="uid://pnklqblnogb3" path="res://icon.svg" id="2_vokew"]
[ext_resource type="Theme" uid="uid://dooj82c87h1t" path="res://Cooking (mechanics and ui)/Assets/Themes/cook_book_scroll_theme.tres" id="3_kmy4b"]

[node name="CookBook" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ulscd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 0
text = "x"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Cook Book"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
current_tab = 0

[node name="Food" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vokew")
metadata/_tab_index = 0

[node name="Food222" type="ScrollContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kmy4b")
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 27
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Meal" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meals"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="Ingredients" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ingredients"

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TabContainer/Food/Food222/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 31

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_kmy4b")
horizontal_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DisplayContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MealImage" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_vokew")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 47

[node name="MealName" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 35
text = "Dish name"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Description:"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="DescriptionOutput" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
text = "aksdfjasdlk"
autowrap_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2

[node name="Price2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2"]
layout_mode = 2
text = "Price:"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="PriceOutput" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="Ingredient" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ingredients:"

[node name="ItemList" type="ItemList" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/PanelContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
auto_height = true

[connection signal="pressed" from="VBoxContainer/MarginContainer2/Button" to="." method="_on_button_pressed"]
